--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
 										<header class="major">
 											<h2>Blog post goes here</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>Click <a href="https://medium.com/@kdianna/the-coffeeshop-phenomenon-why-we-need-to-stop-keep-coming-back-for-more-ad55dfa124aa">here</a> to read my blog post!</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
@@ -89,8 +87,7 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Podcast goes here</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>Click <a href="https://soundcloud.com/user-392949297/the-ascension-of-streaming-services">here</a> to listen to our podcast!</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
