--- a/index.html
+++ b/index.html
@@ -22,16 +22,15 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Dianna Kim</h1>
 						<p>I am a junior majoring in public relations and professional and technical writing at Virginia Tech. I love coffee, dogs, and music.<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#intro" class="active">Blog Post</a></li>
+							<li><a href="#first">Video</a></li>
+							<li><a href="#second">Podcast</a></li>
+							<li><a href="#cta">More</a></li>
 						</ul>
 					</nav>
 
@@ -43,42 +42,42 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Blog post goes here</h2>
+											<h2>The Coffeeshop Phenomenon: Why We (Need to Stop) Keep Coming Back for More.</h2>
 										</header>
 										<p>Click <a href="https://medium.com/@kdianna/the-coffeeshop-phenomenon-why-we-need-to-stop-keep-coming-back-for-more-ad55dfa124aa">here</a> to read my blog post!</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/coffee.jpg" alt="" /></span>
 								</div>
 							</section>
 
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Video goes here</h2>
+									<h2>Skincare and Quarantine: Taking Care and Control. </h2>
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
+										<span class="icon solid major style1 fa-heart"></span>
 										<h3>Ipsum consequat</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+										<span class="icon major style3 fa-smile"></span>
 										<h3>Amed sed feugiat</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
+										<span class="icon major style5 fa-thumbs-up"></span>
 										<h3>Dolor nullam</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="generic.html" class="button">YouTube</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -86,28 +85,28 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Podcast goes here</h2>
+									<h2>The Ascension of Streaming Services</h2>
 									<p>Click <a href="https://soundcloud.com/user-392949297/the-ascension-of-streaming-services">here</a> to listen to our podcast!</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
+										<span class="icon solid fa-tv"></span>
 										<strong>5,120</strong> Etiam
 									</li>
 									<li class="style2">
-										<span class="icon fa-folder-open"></span>
+										<span class="icon solid fa-ticket-alt"></span>
 										<strong>8,192</strong> Magna
 									</li>
 									<li class="style3">
-										<span class="icon solid fa-signal"></span>
+										<span class="icon solid fa-search-dollar"></span>
 										<strong>2,048</strong> Tempus
 									</li>
 									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
+										<span class="icon solid fa-chart-line"></span>
 										<strong>4,096</strong> Aliquam
 									</li>
 									<li class="style5">
-										<span class="icon fa-gem"></span>
+										<span class="icon fa-question-circle"></span>
 										<strong>1,024</strong> Nullam
 									</li>
 								</ul>
