--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 							<section id="first" class="main special">
 								<header class="major">
 									<h2>Skincare and Quarantine: Taking Care and Control. </h2>
+									<p>COVID-19 has changed life as we know it. It may feel lonely and boring to be locked home all day because of the pandemic, but this is a good time to start some stress-relieving habits! Skincare can help you take back some control of your life amidst all the chaos happening right now. It might seem small, but hey, even the tiniest things matter!</p>
 								</header>
 								<ul class="features">
 									<li>
