--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<span class="logo"><img src="images/me.jpg" alt="" /></span>
 						<h1>Dianna Kim</h1>
 						<p>I am a junior majoring in public relations and professional and technical writing at Virginia Tech. I love coffee, dogs, and music.<br />
 					</header>
