made text changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/me.jpg" alt="" /></span>
 						<h1>Dianna Kim</h1>
-						<p>I am a junior majoring in public relations and professional and technical writing at Virginia Tech. I love coffee, dogs, and music.<br />
+						<p>Hello and welcome to my page! I am a junior majoring in public relations and professional and technical writing at Virginia Tech. Here, you'll find a showcase of the different projects that I've worked on over this past semester. I'm passionate about anything artistic, am obsessed with coffee, and love dogs!<br />
 					</header>
 
 				<!-- Nav -->
@@ -42,11 +42,11 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>The Coffeeshop Phenomenon: Why We (Need to Stop) Keep Coming Back for More.</h2>
+											<h2>Blog Post: <i><b>The Coffeeshop Phenomenon: Why We (Need to Stop) Keep Coming Back for More.</b></i></h2>
 										</header>
-										<p>Click <a href="https://medium.com/@kdianna/the-coffeeshop-phenomenon-why-we-need-to-stop-keep-coming-back-for-more-ad55dfa124aa">here</a> to read my blog post!</p>
+										<p>Did you know that the average American spends about $1,100 a year on coffee? There are so many ways that you can save money on America's favorite beverage!
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="https://medium.com/@kdianna/the-coffeeshop-phenomenon-why-we-need-to-stop-keep-coming-back-for-more-ad55dfa124aa" class="button">Start Brewing!</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/coffee.jpg" alt="" /></span>
@@ -56,29 +56,29 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Skincare and Quarantine: Taking Care and Control. </h2>
+									<h2>Video: <i><b>Skincare 101 For Dummies</b></i></h2>
 									<p>COVID-19 has changed life as we know it. It may feel lonely and boring to be locked home all day because of the pandemic, but this is a good time to start some stress-relieving habits! Skincare can help you take back some control of your life amidst all the chaos happening right now. It might seem small, but hey, even the tiniest things matter!</p>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-heart"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Self Love and Care</h3>
+										<p>Everybody needs to give themselves some self love and care, especially during this pandemic. What better way to do this than giving your skin some much-needed attention?</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-smile"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Boost Happiness</h3>
+										<p>Happy skin equals a happier you! A happy you equals happier skin! Starting to see the benefits of taking care of your skin, now? Skincare is one of many things that you can do to boost your skin <i>and</i> your happiness!</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-thumbs-up"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Take Back Control</h3>
+										<p>COVID-19 has many of us feeling like we lost some control of our lives. Luckily, there are endless hobbies that you can pick up to improve the quality of your lifestyle! With skincare, you'll see the efforts of your work blossom right in front of your eyes.</p>
 									</li>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">YouTube</a></li>
+									<li><a href="https://youtu.be/hOCtHnUX4ic" class="button">Start your skincare journey here!</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -86,50 +86,46 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>The Ascension of Streaming Services</h2>
-									<p>Click <a href="https://soundcloud.com/user-392949297/the-ascension-of-streaming-services">here</a> to listen to our podcast!</p>
+									<h2>Podcast: <i><b>The Ascension of Streaming Services</b></i></h2>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-tv"></span>
-										<strong>5,120</strong> Etiam
+										<strong>5,120</strong> At-Home Streaming
 									</li>
 									<li class="style2">
 										<span class="icon solid fa-ticket-alt"></span>
-										<strong>8,192</strong> Magna
+										<strong>8,192</strong> The Future of Theaters
 									</li>
 									<li class="style3">
 										<span class="icon solid fa-search-dollar"></span>
-										<strong>2,048</strong> Tempus
+										<strong>2,048</strong> Talking Money
 									</li>
 									<li class="style4">
 										<span class="icon solid fa-chart-line"></span>
-										<strong>4,096</strong> Aliquam
+										<strong>4,096</strong> Stocks
 									</li>
 									<li class="style5">
 										<span class="icon fa-question-circle"></span>
-										<strong>1,024</strong> Nullam
+										<strong>1,024</strong> What Now?
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								<p class="content">COVID-19 has transformed so many normal aspects of everyday life. Perhaps one of the biggest, and potentially permanent, impacts that this global pandemic has caused is the cinematic battle between movie theaters and the streaming services. Not only has this altered the way consumers intake media, but it has also caused interesting changes in money and stocks with fluctuating movie profits. Ultimately, we're left to contemplate the future of streaming and theaters as we address the elephant in the room: What happens now?</p>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
+								<li><a href="https://soundcloud.com/user-392949297/the-ascension-of-streaming-services" class="button">Listen to the Cinematic Battle!</a></li>										</ul>
 								</footer>
 							</section>
 
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>For more information...</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Local Coffeeshops in Blacksburg</h2>
+									<p>There <i>will</i> be times where you're itching for a cup of store-bought coffee. Or maybe you just won't have the time to brew your own coffee at home some days. Kill two birds with one stone by getting your caffeine fix while supporting small local businesses! Blacksburg is home to so many unique coffeeshops. Sit back, relax, and enjoy your coffee knowing that you've made an impact on a small local coffeeshop!</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="https://www.downtownblacksburg.com/coffee-shops-blacksburg.aspx" class="button primary">Discover Blacksburg Coffeeshops</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -139,31 +135,29 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<h2>Learn More About Me!</h2>
+							<p>Interested in learning more about the work I do? Feel free to visit my online portfolio! There, you'll discover my academic, professional, personal and extracurricular highlights. Hope to see you there soon!</p>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
+								<li><a href="https://kdianna4.wixsite.com/mysite" class="button">My Portfolio</a></li>
 							</ul>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Personal Information</h2>
 							<dl class="alt">
 								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+								<dd>4310 Warner Lane &bull; Chantilly, VA 20151 &bull; USA</dd>
 								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<dd>(703) 627-3312</dd>
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dd><a href="mailto:kdianna@vt.edu">kdianna@vt.edu</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+								<li><a href="https://www.facebook.com/dianna.s.kim" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/diannakimmi/" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/diannakim" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/dianna-kim-3153a1188/" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
