fixed file, made two changes
heart attack averted

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Dianna Kim</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/me.jpg" alt="" /></span>
+						<span class="logo"><img src="images/mELAST.jpg" alt="" /></span>
 						<h1>Dianna Kim</h1>
 						<p>Hello and welcome to my page! I am a junior majoring in public relations and professional and technical writing at Virginia Tech. Here, you'll find a showcase of the different projects that I've worked on over this past semester. I'm passionate about anything artistic, am obsessed with coffee, and love dogs!<br />
 					</header>
@@ -68,7 +68,7 @@
 									<li>
 										<span class="icon major style3 fa-smile"></span>
 										<h3>Boost Happiness</h3>
-										<p>Happy skin equals a happier you! A happy you equals happier skin! Starting to see the benefits of taking care of your skin, now? Skincare is one of many things that you can do to boost your skin <i>and</i> your happiness!</p>
+										<p>Happy skin equals a happier you! A happy you equals happier skin! Starting to see the benefits of taking care of your skin now? Skincare is one of many things that you can do to boost your skin <i>and</i> your happiness!</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-thumbs-up"></span>
@@ -91,26 +91,26 @@
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-tv"></span>
-										<strong>5,120</strong> At-Home Streaming
+										<strong>At-Home Streaming</strong>
 									</li>
 									<li class="style2">
 										<span class="icon solid fa-ticket-alt"></span>
-										<strong>8,192</strong> The Future of Theaters
+										<strong>The Future of Theaters</strong>
 									</li>
 									<li class="style3">
 										<span class="icon solid fa-search-dollar"></span>
-										<strong>2,048</strong> Talking Money
+										<strong>Talking Money</strong>
 									</li>
 									<li class="style4">
 										<span class="icon solid fa-chart-line"></span>
-										<strong>4,096</strong> Stocks
+										<strong>Stocks</strong>
 									</li>
 									<li class="style5">
 										<span class="icon fa-question-circle"></span>
-										<strong>1,024</strong> What Now?
+										<strong>What Now?</strong>
 									</li>
 								</ul>
-								<p class="content">COVID-19 has transformed so many normal aspects of everyday life. Perhaps one of the biggest, and potentially permanent, impacts that this global pandemic has caused is the cinematic battle between movie theaters and the streaming services. Not only has this altered the way consumers intake media, but it has also caused interesting changes in money and stocks with fluctuating movie profits. Ultimately, we're left to contemplate the future of streaming and theaters as we address the elephant in the room: What happens now?</p>
+								<p class="content">COVID-19 has transformed so many normal aspects of everyday life. Perhaps one of the biggest, and potentially permanent, impacts that this global pandemic has caused is the cinematic battle between movie theaters and the  streaming. Not only has this altered the way consumers intake media, but it has also caused interesting changes in money and stocks. Ultimately, we're left to contemplate the future of streaming and theaters as we address the elephant in the room: What happens now?</p>
 								<footer class="major">
 									<ul class="actions special">
 								<li><a href="https://soundcloud.com/user-392949297/the-ascension-of-streaming-services" class="button">Listen to the Cinematic Battle!</a></li>										</ul>
