changed icon size

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/mELAST.jpg" alt="" /></span>
+						<span class="logo"><img src="images/mewithstarbucks.jpg" alt="" /></span>
 						<h1>Dianna Kim</h1>
 						<p>Hello and welcome to my page! I am a junior majoring in public relations and professional and technical writing at Virginia Tech. Here, you'll find a showcase of the different projects that I've worked on over this past semester. I'm passionate about anything artistic, am obsessed with coffee, and love dogs!<br />
 					</header>
